Fix bug of too much padding for drawer

--- a/styles/content.less
+++ b/styles/content.less
@@ -32,7 +32,7 @@ html {
 				position: fixed;
 				top: @topBarH;
 				left: 0;
-				padding-bottom: 50px; //required to account for the browser's bar
+				padding-bottom: 32px; //required to account for the browser's bar
 			}
 
 			#content {
